--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # 密码
-PASSWORD=qpalzm123
+PASSWORD=801201
 
 # 端口
-SERVER_PORT=3306
+SERVER_PORT=8388
 
 # 加密方式
-METHOD=chacha20-ietf-poly1305
+METHOD=aes-256-cfb
 
 # DNS
 DNS_ADDRS=223.5.5.5,1.1.1.1
